# PDF-Question-Answering-RAG

./: .gitignore  pyproject.toml  requirements.txt
chroma_langchain_db/: chroma.sqlite3
faiss_index/: index.faiss  index.pkl
main/: app.py  main-1.py  main.ipynb
main-2/: app.py
main-2/faiss_index/: index.faiss  index.pkl
main/faiss_index/: index.faiss  index.pkl
project_anual_report_pdf/: main.ipynb  main_v2.ipynb
project_anual_report_pdf/chroma_langchain_db/51739826-8a2f-4934-938a-b36cb59523b7/: index_metadata.pickle
