[project]
name = "pdf-question-answering-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "pypdf2>=3.0.1",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.0",
    "torchvision>=0.27.1",
]
